pitch looking great, chord ok

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </filter>
       </defs>
     </svg>
+    <div id="mode-indicator">P</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
